# example-salvo-seaorm

./: .env  Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs  state.rs
src/abstract_trait/: category.rs  comment.rs  mod.rs  post.rs  user.rs
src/config/: config.rs  database.rs  hashing.rs  jwt.rs  mod.rs
src/domain/: mod.rs
src/domain/request/: auth.rs  category.rs  comment.rs  mod.rs  post.rs  user.rs
src/domain/response/: category.rs  comment.rs  mod.rs  post.rs  user.rs
src/entities/: categories.rs  comments.rs  mod.rs  posts.rs  prelude.rs  users.rs
src/handler/: auth.rs  category.rs  comment.rs  mod.rs  posts.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/migrations/: m20220101_000001_create_table.rs
src/repository/: category.rs  comment.rs  posts.rs  user.rs
src/service/: category.rs  mod.rs  posts.rs
src/utils/: di.rs  errors.rs  mod.rs  slug.rs
